# Chat-Webhooks

./: .replit  README.md  pyproject.toml  replit.nix
docs/: index.md
src/chat_webhooks/: __init__.py  __main__.py  core.py  errors.py
src/pypackage/: __init__.py
tests/: test_sample.py
